Prevent page refresh on scroll overflow (mobile)

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,5 +2,6 @@ html, body {
   margin: 0;
   padding: 0;
   background-color: rgb(24, 24, 24);
+  overscroll-behavior: contain;
 }
 button:focus {outline:0;}
